--- a/client/app.html
+++ b/client/app.html
@@ -17,9 +17,9 @@
     <input class="area"  type="email" id="uiSqft" class="floatLabel" name="Squareft" value="1000">
 	<h2>BHK</h2>
 	<div class="switch-field">
-		<input type="radio" id="radio-bhk-1" name="uiBHK" value="1"/>
+		<input type="radio" id="radio-bhk-1" name="uiBHK" value="1" checked/>
 		<label for="radio-bhk-1">1</label>
-		<input type="radio" id="radio-bhk-2" name="uiBHK" value="2" checked/>
+		<input type="radio" id="radio-bhk-2" name="uiBHK" value="2"/>
 		<label for="radio-bhk-2">2</label>
 		<input type="radio" id="radio-bhk-3" name="uiBHK" value="3"/>
 		<label for="radio-bhk-3">3</label>
@@ -32,9 +32,9 @@
 <form class="form">
 	<h2>Bath</h2>
 	<div class="switch-field">
-		<input type="radio" id="radio-bath-1" name="uiBathrooms" value="1"/>
+		<input type="radio" id="radio-bath-1" name="uiBathrooms" value="1" checked/>
 		<label for="radio-bath-1">1</label>
-		<input type="radio" id="radio-bath-2" name="uiBathrooms" value="2" checked/>
+		<input type="radio" id="radio-bath-2" name="uiBathrooms" value="2"/>
 		<label for="radio-bath-2">2</label>
 		<input type="radio" id="radio-bath-3" name="uiBathrooms" value="3"/>
 		<label for="radio-bath-3">3</label>
@@ -47,8 +47,8 @@
 	<div>
   <select class="location" name="" id="uiLocations">
     <option value="" disabled="disabled" selected="selected">Choose a Location</option>
-		<option>Electronic City</option>
-        <option>Rajaji Nagar</option>
+		<option>Shivaji Nagar</option>
+        <option>Hebbal</option>
   </select>
 </div>
 	<button class="submit" onclick="onClickedEstimatePrice()" type="button">Estimate Price</button>
